--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,9 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+    "ConnectionStrings": {
+      "DefaultConnection": "Data Source=LAPTOP-JKBJPEDU;Initial Catalog=SpaManagement;Integrated Security=True;Trust Server Certificate=True"
+    },
+    "Jwt": {
+      "Key": "u7uon'sprivatetokensieucapviprotungtungtungtungsahur",
+      "Issuer": "TutaSpaApi",
+      "Audience": "TutaSpaClient",
+      "AccessTokenExpiryInMinutes": 15,
+      "RefreshTokenExpiryInDays": 7
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
