--- a/.gitignore
+++ b/.gitignore
@@ -405,3 +405,9 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+/API/appsettings.json
+/API/appsettings.Development.json
+/API/appsettings.json
+/API/appsettings.Development.json
+/API/appsettings.Development.json
+/API/appsettings.json
