--- a/interface/package.json
+++ b/interface/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
