--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-      "DefaultConnection": "Data Source=LAPTOP-JKBJPEDU;Initial Catalog=SpaManagement;Integrated Security=True;Trust Server Certificate=True"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAPTOP-25SOSMQ7;Initial Catalog=TutaSpa;Integrated Security=True;Trust Server Certificate=True"
+  },
     "Jwt": {
       "Key": "u7uon'sprivatetokensieucapviprotungtungtungtungsahur",
       "Issuer": "TutaSpaApi",
