Xuat thanh phap kho

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-25SOSMQ7;Initial Catalog=TutaSpa;Integrated Security=True;Trust Server Certificate=True"
+
+    "DefaultConnection": "Data Source=DESKTOP-PAJ92KT\\NNH;Initial Catalog=TutaSpa;Integrated Security=True;Trust Server Certificate=True"
+
   },
     "Jwt": {
       "Key": "u7uon'sprivatetokensieucapviprotungtungtungtungsahur",
